# ski-paradise-rust

./: .gitignore  README.md
api/: .env  Cargo.toml
api/src/: lib.rs  main.rs
api/src/resort/: handlers.rs  model.rs  routes.rs
api/src/user/: handlers.rs  model.rs
ui/: package-lock.json  package.json
ui/public/: index.html
ui/src/: App.css  App.js  index.js
ui/src/Components/SkiModal/: index.js
ui/src/Utils/: api.js  context.js
ui/src/Views/Home/: index.js
ui/src/Views/Report/: index.js
ui/src/Views/Resorts/: index.js
ui/src/Views/ThankYou/: index.js
ui/src/Views/UserRegistration/: index.js
