[package]
name = "api"
version = "0.1.0"
authors = ["Oscar Barba <oscarbarbaa@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
actix-cors = "0.5.4"
actix-rt = "2.1.0"
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15.0"
mongodb = "1.2.0"
bson = "1.2.0"
chrono = "0.4.19"
futures = "0.3.13"